EVA-84 Feat:Se agrega el nombre de contrato a la columna de contrato en el index de consecutivos

--- a/GestionDocumental/templates/GestionDocumental/ConsecutivoOficios/index.html
+++ b/GestionDocumental/templates/GestionDocumental/ConsecutivoOficios/index.html
@@ -59,7 +59,7 @@
                                                             <td>{{ consecutivo.codigo}}</td>
                                                             <td>{{ consecutivo.fecha | date:'Y-m-d H:m'}}</td>
                                                             <td>{% if consecutivo.contrato %}
-                                                                    {{ consecutivo.contrato}}
+                                                                    {{ consecutivo.contrato}} - {{ consecutivo.contrato.cliente }}
                                                                 {% else %}
                                                                     {% for col in colaborador %}
                                                                         {% if col.usuario_id == consecutivo.usuario.id %}
