--- a/SGI/templates/SGI/documentos/cargar-documento.html
+++ b/SGI/templates/SGI/documentos/cargar-documento.html
@@ -26,7 +26,7 @@
                     </div>
                     <br>
                     <div class="m-b-10 div_archivo">
-                        {% input_file_tag 'archivo' 'Archivo' placeholder="Seleccione un archivo" required="" modal=True invalido=errores.logo accept=".docx, .pptx, .xlsx, .xlsm, .pdf" mensaje_validacion='Por favor seleccione un archivo'%}
+                        {% input_file_tag 'archivo' 'Archivo' placeholder="Seleccione un archivo" required="" modal=True invalido=errores.logo accept=".docx, .pptx, .xlsx, .xlsm, .pdf, .dwg" mensaje_validacion='Por favor seleccione un archivo'%}
                     </div>
                     <div class="m-b-10 div_enlace" style="display:none;">
                         {% input_text_tag 'enlace' 'Enlace' placeholder="Ingrese un enlace" maxlength="300" modal=True value=documento.enlace mensaje_validacion='Por favor ingrese un enlace' invalido=errores.enlace %}
