--- a/TalentoHumano/templates/TalentoHumano/_common/_tarjeta_empleado.html
+++ b/TalentoHumano/templates/TalentoHumano/_common/_tarjeta_empleado.html
@@ -38,6 +38,8 @@
         <div class="card-body p-0 collapse show">
             <div class="p-3">
                 <a  class="mt-1 d-block fs-sm fw-400 text-dark">
+                    <i class="fas fa-user text-muted mr-2"></i> {{colaborador.usuario.username}}</a>
+                <a  class="mt-1 d-block fs-sm fw-400 text-dark">
                     <i class="fas fa-mobile-alt text-muted mr-2"></i> {{telefono}}</a>
                 <a class="mt-1 d-block fs-sm fw-400 text-dark">
                     <i class="fas fa-address-card text-muted mr-2"></i> {{identificacion}}</a>
