--- a/GestionDocumental/templates/GestionDocumental/_common/menu_aplicacion.html
+++ b/GestionDocumental/templates/GestionDocumental/_common/menu_aplicacion.html
@@ -1,8 +1,16 @@
 {% if perms.GestionDocumental.view_consecutivooficio %}
-<li {% if menu_actual == 'consecutivos' %} class="active" {% endif %}>
+<li {% if menu_actual == 'consecutivos-oficios' %} class="active" {% endif %}>
     <a href="{% url 'GestionDocumental:consecutivo-oficios-index' 0 %}" title="Consecutivo de Oficios" data-filter-tags="consecutivo oficios">
         <i class="far fa-file-alt"></i>
         <span class="nav-link-text" data-i18n="nav.gestion_documental_consecutivo_oficios">Consecutivo de Oficios</span>
+    </a>
+</li>
+{% endif %}
+{% if perms.GestionDocumental.view_consecutivocontrato %}
+<li {% if menu_actual == 'consecutivos-contrato' %} class="active" {% endif %}>
+    <a href="{% url 'GestionDocumental:consecutivo-contratos-index' 0 %}" title="Consecutivo de Contratos" data-filter-tags="consecutivo contratos">
+        <i class="far fa-file-alt"></i>
+        <span class="nav-link-text" data-i18n="nav.gestion_documental_consecutivo_contratos">Consecutivo de Contratos</span>
     </a>
 </li>
 {% endif %}
