--- a/GestionDocumental/templates/GestionDocumental/ConsecutivoOficios/crear.html
+++ b/GestionDocumental/templates/GestionDocumental/ConsecutivoOficios/crear.html
@@ -63,9 +63,5 @@
     <script src="{% static 'EVA/Plantilla/js/formplugins/select2/select2.bundle.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/formplugins/bootstrap-datepicker/bootstrap-datepicker.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/custom/validaciones/validar_formulario.js' %}"></script>
-    <script>
-		$(document).ready(function () {
-		    $('.select2').select2();
-		});
-	</script>
+    <script src="{% static 'EVA/Plantilla/js/custom/modificacionesSelect2.js' %}"></script>
 {% endblock scripts %}
