EVA-90 Refactor: Se cambia el llamado del select2 desde cada template de EVA para el js de modificacionesSelect2 Para que puedan aplicarse los cambios de idioma de los mensajes incluidos con la libreria.

--- a/TalentoHumano/templates/TalentoHumano/Entidades_CAFE/index.html
+++ b/TalentoHumano/templates/TalentoHumano/Entidades_CAFE/index.html
@@ -106,10 +106,5 @@
     <script src="{% static 'EVA/Plantilla/js/datagrid/datatables/datatables.export.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/custom/exportar_tabla.js' %}"></script>
     <script src="{% static 'TalentoHumano/js/Entidades_CAFE/exportar_tabla.js' %}"></script>
-    <script>
-		$(document).ready(function () {
-		    $('.select2').select2();
-		});
-	</script>
-
-    {% endblock %}
+    <script src="{% static 'EVA/Plantilla/js/custom/modificacionesSelect2.js' %}"></script>
+{% endblock %}
