--- a/SGI/templates/SGI/CadenasAprobacion/crear-editar.html
+++ b/SGI/templates/SGI/CadenasAprobacion/crear-editar.html
@@ -77,9 +77,5 @@
     <script src="{% static 'EVA/Plantilla/js/formplugins/select2/select2.bundle.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/custom/validaciones/validar_formulario.js' %}"></script>
     <script src="{% static 'SGI/js/cadenaDeAprobacion.js' %}"></script>
-	<script>
-		$(document).ready(function () {
-		    $('.select2').select2();
-		});
-	</script>
+	<script src="{% static 'EVA/Plantilla/js/custom/modificacionesSelect2.js' %}"></script>
 {% endblock scripts%}
