--- a/TalentoHumano/templates/TalentoHumano/Colaboradores/index.html
+++ b/TalentoHumano/templates/TalentoHumano/Colaboradores/index.html
@@ -82,7 +82,7 @@
     <script src="{% static 'EVA/Plantilla/js/custom/ajaxDjango.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/formplugins/select2/select2.bundle.js' %}"></script>
     <script src="{% static 'TalentoHumano/js/filtro_entidad.js' %}"></script>
-
+    <script src="{% static 'EVA/Plantilla/js/custom/modificacionesSelect2.js' %}"></script>
     <script>
         $(document).ready(function()
         {
@@ -110,9 +110,5 @@
             //initialize filter
             initApp.listFilter($('#js-contacts'), $('#js-filter-contacts'));
         });
-        $(document).ready(function () {
-		    $('.select2').select2();
-		});
-
     </script>
 {% endblock scripts%}
