EVA-90 Refactor: Se cambia el llamado del select2 en crear-editar colaborador 1- Se reemplaza por el llamado del js de modificacionesSelect2 2- Se pasa la configuración del select2 de contratos para un archivo independiente y se le aplican las configuraciones de idioma.

--- a/TalentoHumano/templates/TalentoHumano/Colaboradores/crear-editar.html
+++ b/TalentoHumano/templates/TalentoHumano/Colaboradores/crear-editar.html
@@ -279,16 +279,6 @@
     <script src="{% static 'TalentoHumano/js/date_picker.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/formplugins/smartwizard/smartwizard.js' %}"></script>
     <script src="{% static 'TalentoHumano/js/wizard.js' %}"></script>
-
-    <script>
-        $(document).ready(function () {
-            $('.select2').select2();
-             $('#contrato_id').select2(
-                    {
-                        placeholder: "Seleccione un contrato"
-                    });
-             $('#contrato_id').next().find("input").css("min-width","200px");
-             $('#contrato_id').val(JSON.parse($('#multiple').val())).trigger("change");
-        });
-    </script>
+    <script src="{% static 'EVA/Plantilla/js/custom/modificacionesSelect2.js' %}"></script>
+    <script src="{% static 'TalentoHumano/js/selectMultipleContratos.js' %}"></script>
 {% endblock scripts%}
