--- a/TalentoHumano/templates/TalentoHumano/GestionPermisos/_tarjeta_permiso.html
+++ b/TalentoHumano/templates/TalentoHumano/GestionPermisos/_tarjeta_permiso.html
@@ -1,27 +1,42 @@
 {% load static %}
 {% load eva_tags %}
 <div class="col-xl-3">
-    <div id="d_{{ desencadenador.id }}" class="card border shadow-0 mb-g shadow-sm-hover" data-filter-tags="{{ desencadenador.nombre | lower }}">
+    <div id="div_{{ permiso.id }}" class="card border shadow-0 mb-g shadow-sm-hover" data-filter-tags="{{ permiso.nombre | lower }}">
         <div class="card-body border-faded border-top-0 border-left-0 border-right-0 rounded-top">
             <div class="form-row">
                 <div class="col-md-10">
-                    <a href="javascript:void(0);" class="card-title"><strong>{{ desencadenador.nombre }}</strong></a>
+                    <a href="javascript:void(0);" class="card-title"><strong>{{ permiso.nombre }}</strong></a>
                 </div>
                 <div class="col-md-2" style="">
                     <div class="custom-control custom-switch" style="float: right;">
                         <div class="custom-control custom-checkbox">
-                            <input type="checkbox" value="{{ desencadenador.id }}" id="{{ desencadenador.nombre }}_id" name="desencadenadores" {% for select in selecciones %}{% if select.evento_desencadenador_id == desencadenador.id %}checked{% endif %}{% endfor %} class="custom-control-input form-control">
-                            <label for="{{ desencadenador.nombre }}_id" class="custom-control-label no-seleccionable"></label>
+                            <input type="checkbox" value="{{ permiso.id }}" id="permiso_{{ permiso.id }}_id" onclick="activarFuncionalidad('permiso_' + {{ permiso.id }} + '_id')" name="permisos" class="custom-control-input form-control">
+                            <label for="permiso_{{ permiso.id }}_id" class="custom-control-label no-seleccionable"></label>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
         <div class="card-body p-0 collapse show">
-            <div class="p-3">
+            <div class="p-2">
                 <a  class="mt-1 d-block fs-sm fw-400 text-dark">
-                    <strong>Descripción:</strong>
-                    <i class="text-muted"></i>  {{desencadenador.descripcion}}
+                   <strong>Descripción:</strong>
+                    <i class="text-muted"></i>  {{ permiso.descripcion}}
+                    {% for accion in acciones_permisos %}
+                    <div class="form-row">
+                        <div class="col-md-10">
+                            <a href="javascript:void(0);"><strong>{{ accion.nombre }}</strong></a>
+                        </div>
+                        <div class="col-md-2" style="">
+                            <div class="custom-control custom-switch" style="float: right;">
+                                <div class="custom-control custom-checkbox">
+                                    <input type="checkbox" value="{{ accion.id }}" id="accion_{{ accion.id }}_permiso_{{ permiso.id }}_id" name="permisos" class="custom-control-input form-control">
+                                    <label for="accion_{{ accion.id }}_permiso_{{ permiso.id }}_id" class="custom-control-label no-seleccionable"></label>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    {% endfor %}
                 </a>
             </div>
         </div>
