--- a/TalentoHumano/templates/TalentoHumano/GestionPermisos/asignacion_permisos.html
+++ b/TalentoHumano/templates/TalentoHumano/GestionPermisos/asignacion_permisos.html
@@ -6,13 +6,14 @@
     <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/fa-regular.css' %}">
     <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/fa-brands.css' %}">
     <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/fa-solid.css' %}">
+    <link rel="stylesheet" href="{% static 'Notificaciones/css/asignacion.css' %}">
 {% endblock styles %}
 
 {% block main %}
     <div class="panel-container show">
         <div class="header">
             <h1 class="header-title">
-                <i class='far fa-bell'></i> Asignar Permisos A:  {{ colaborador.nombre }} <span class='fw-300'></span>
+                <i class='far fa-bell'></i> Asignar Permisos A:  {{ colaborador.nombre_completo }} <span class='fw-300'></span>
                 <br>
                 <br>
             </h1>
@@ -22,46 +23,48 @@
                 <div id="panel-1" class="panel">
                     <form action="{% url 'TalentoHumano:colaboradores-permisos' colaborador.id %}" id="asignacion-permisos-form" method="post" class="needs-validation" novalidate>
                     {% csrf_token %}
-                        <div class="panel-hdr">
-                            <small>
-                                 <a class="far fa-3x far fa-arrow-circle-left"  href="{% url 'TalentoHumano:colaboradores-index' 0 %}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Volver"></a>
-                            </small>
-                            {% if  desencadenadores %}
-                            <small class="posicionar-guardar">
-                                 <a class="far fa-3x far fa-save" href="javascript:(guardarAsignacionesPermisos())" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Guardar Cambios"></a>
-                                 </a>
-                            </small>
-                            {% endif %}
-                        </div>
-                        <div class="panel-container show">
-                            <div class="panel-content p-t-0 p-b-0">
-                                <div class="panel-group">
-                                    <div class="panel-body">
-                                        <div class="form-row p-t-10">
-                                            <div class="col-xl-12">
-                                                <div class="border-faded bg-faded p-3 mb-g d-flex">
-                                                    <input type="text" id="js-filter-general" class="form-control shadow-inset-2 form-control-lg" placeholder="Filtrar Permisos">
-                                                    <div class="btn-group btn-group-lg btn-group-toggle hidden-lg-down ml-3" data-toggle="buttons">
-                                                        <label class="btn btn-default active">
-                                                            <input type="radio" name="filtro-general" id="grid" checked="" value="grid"><i class="fas fa-table"></i>
-                                                        </label>
-                                                        <label class="btn btn-default">
-                                                            <input type="radio" name="filtro-general" id="table" value="table"><i class="fas fa-th-list"></i>
-                                                        </label>
-                                                    </div>
+                        <input id="id_permisos" value="{{ id_permisos }}" style="display: none">
+                        <input id="valores_permisos" name="valores_permisos" style="display: none">
+                    </form>
+                    <div class="panel-hdr">
+                        <small>
+                             <a class="far fa-3x far fa-arrow-circle-left"  href="{% url 'TalentoHumano:colaboradores-index' 0 %}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Volver"></a>
+                        </small>
+                        {% if  permisos %}
+                        <small class="posicionar-guardar">
+                             <a class="far fa-3x far fa-save" href="javascript:(guardarAsignacionesPermisos())" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Guardar Cambios"></a>
+                             </a>
+                        </small>
+                        {% endif %}
+                    </div>
+                    <div class="panel-container show">
+                        <div class="panel-content p-t-0 p-b-0">
+                            <div class="panel-group">
+                                <div class="panel-body">
+                                    <div class="form-row p-t-10">
+                                        <div class="col-xl-12">
+                                            <div class="border-faded bg-faded p-3 mb-g d-flex">
+                                                <input type="text" id="js-filter-general" class="form-control shadow-inset-2 form-control-lg" placeholder="Filtrar Permisos">
+                                                <div class="btn-group btn-group-lg btn-group-toggle hidden-lg-down ml-3" data-toggle="buttons">
+                                                    <label class="btn btn-default active">
+                                                        <input type="radio" name="filtro-general" id="grid" checked="" value="grid"><i class="fas fa-table"></i>
+                                                    </label>
+                                                    <label class="btn btn-default">
+                                                        <input type="radio" name="filtro-general" id="table" value="table"><i class="fas fa-th-list"></i>
+                                                    </label>
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="row" id="filtro-general">
-                                            {% for permiso in permisos %}
-                                                {% include 'Notificaciones/AsignacionNotificaciones/_tarjeta_desencadenador.html' with permiso=permiso %}
-                                            {% endfor %}
-                                        </div>
+                                    </div>
+                                    <div class="row" id="filtro-general">
+                                        {% for permiso in permisos %}
+                                            {% include 'TalentoHumano/GestionPermisos/_tarjeta_permiso.html' with permiso=permiso %}
+                                        {% endfor %}
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </form>
+                    </div>
                 </div>
             </div>
         </div>
@@ -70,5 +73,5 @@
 
 {% block scripts %}
     <script src="{% static 'EVA/Plantilla/js/custom/controlFiltro.js' %}"></script>
-    <script src="{% static 'Notificaciones/js/asignacionNotificacion.js' %}"></script>
+    <script src="{% static 'TalentoHumano/js/asignacionPermisos.js' %}"></script>
 {% endblock scripts%}
