--- a/TalentoHumano/templates/TalentoHumano/GestionPermisos/_tarjeta_permiso.html
+++ b/TalentoHumano/templates/TalentoHumano/GestionPermisos/_tarjeta_permiso.html
@@ -10,9 +10,7 @@
                 <div class="col-md-2" style="">
                     <div class="custom-control custom-switch" style="float: right;">
                         <div class="custom-control custom-checkbox">
-                            {% for func in funcionalidades %}
-                                <input type="checkbox" value="{{ permiso.funcionalidad }}" id="permiso_{{ permiso.funcionalidad }}_id" onclick="activarFuncionalidad('permiso_' + {{ permiso.funcionalidad }} + '_id')" {% if func.content_type_id == permiso.funcionalidad %} checked {% endif %}name="permisos" class="custom-control-input form-control">
-                            {% endfor %}
+                            <input type="checkbox" value="{{ permiso.funcionalidad }}" id="permiso_{{ permiso.funcionalidad }}_id" onclick="activarFuncionalidad('permiso_' + {{ permiso.funcionalidad }} + '_id')" {% for func in permisos_usuario %}{% if func.content_type_id == permiso.funcionalidad %} checked {% endif %}{% endfor %} name="permisos" class="custom-control-input form-control">
                             <label for="permiso_{{ permiso.funcionalidad }}_id" class="custom-control-label no-seleccionable"></label>
                         </div>
                     </div>
@@ -32,10 +30,8 @@
                         <div class="col-md-2" style="">
                             <div class="custom-control custom-switch" style="float: right;">
                                 <div class="custom-control custom-checkbox">
-                                    {% for permiso_usuario in permisos_usuario %}
-                                        <input type="checkbox" value="{{ perm.id }}" id="accion_{{ perm.id }}_permiso_{{ permiso.funcionalidad }}_id" {% if permiso_usuario.id == perm.id %} checked {% endif %} name="permisos" class="custom-control-input form-control">
-                                    {% endfor %}
-                                    <label for="accion_{{ perm.id }}_permiso_{{ permiso.funcionalidad }}_id" class="custom-control-label no-seleccionable"></label>
+                                    <input type="checkbox" value="{{ perm.orden }}" id="accion_{{ perm.orden }}_permiso_{{ permiso.funcionalidad }}_id" {% for permiso_usuario in permisos_usuario %}{% if permiso_usuario.id == perm.id %} checked {% endif %}{% endfor %} name="permisos" class="custom-control-input form-control">
+                                    <label for="accion_{{ perm.orden }}_permiso_{{ permiso.funcionalidad }}_id" class="custom-control-label no-seleccionable"></label>
                                 </div>
                             </div>
                         </div>
