EVA-91 Fix: Se establece una altura minima a la tarjeta de permiso Para que cuando no los tenga todos, no se reduzca

--- a/TalentoHumano/templates/TalentoHumano/GestionPermisos/_tarjeta_permiso.html
+++ b/TalentoHumano/templates/TalentoHumano/GestionPermisos/_tarjeta_permiso.html
@@ -17,7 +17,7 @@
                 </div>
             </div>
         </div>
-        <div class="card-body p-0 collapse show">
+        <div class="card-body p-0 collapse show" style="min-height: 140px">
             <div class="p-2">
                 <a  class="mt-1 d-block fs-sm fw-400 text-dark">
                    <strong>Descripción:</strong>
