--- a/SGI/templates/SGI/AprobacionDocumentos/accion_documento.html
+++ b/SGI/templates/SGI/AprobacionDocumentos/accion_documento.html
@@ -17,11 +17,11 @@
                 {% csrf_token %}
                 <div class="form-group">
                     <div class="m-b-10">
-                        {% input_textarea_tag 'comentario' 'Comentarios' maxlength="300" placeholder="Describa la razon por la cual va a tomar la acción" required="" modal=True  mensaje_validacion='Por favor escriba un comentario' invalido=errores.comentario %}
+                        {% input_textarea_tag 'comentario' 'Comentarios' maxlength="300" placeholder="Describa la razón por la cual va a tomar la acción" required="" modal=True  mensaje_validacion='Por favor escriba un comentario' invalido=errores.comentario %}
                     </div>
                     <div class="m-b-10">
                         <div class="frame-wrap">
-                            {% input_select_radio_tag 'opcion' '¿Desea aprobar este documento?' opciones required="" modal=True mensaje_validacion='Por favor seleccione una opcion' invalido=errores.comentario %}
+                            {% input_select_radio_tag 'opcion' '¿Desea aprobar este documento?' opciones required="" modal=True mensaje_validacion='Por favor seleccione una opción' invalido=errores.comentario %}
                         </div>
                     </div>
                 </div>
