--- a/TalentoHumano/templates/TalentoHumano/GestionPermisos/asignacion_permisos.html
+++ b/TalentoHumano/templates/TalentoHumano/GestionPermisos/asignacion_permisos.html
@@ -21,7 +21,7 @@
         <div class="row">
             <div class="col-xl-12">
                 <div id="panel-1" class="panel">
-                    <form action="{% url 'TalentoHumano:colaboradores-permisos' usuario.id %}" id="asignacion-permisos-form" method="post" class="needs-validation" novalidate>
+                    <form action="{% url 'TalentoHumano:colaboradores-permisos' usuario.id id_filtro %}" id="asignacion-permisos-form" method="post" class="needs-validation" novalidate>
                     {% csrf_token %}
                         <input id="datos_permisos" name="datos_permisos" value="{{ datos_permisos }}" style="display: none">
                         <input id="valores_permisos" name="valores_permisos" style="display: none">
