--- a/TalentoHumano/templates/TalentoHumano/GestionPermisos/asignacion_permisos.html
+++ b/TalentoHumano/templates/TalentoHumano/GestionPermisos/asignacion_permisos.html
@@ -60,29 +60,33 @@
                                             </div>
                                         </div>
                                     </div>
-                                {% for ct in lista_content_type %}
-                                <nav class="navbar navbar-expand-lg navbar-dark bg-primary bg-primary-gradient">
-                                    <a class="navbar-brand d-flex align-items-center fw-500" style="color: white">{{ ct.campo_texto }}</a>
-                                </nav>
-                                <br>
-                                <div class="row">
-                                    {% for permiso in permisos %}
-                                        {% if ct.campo_texto == permiso.app_label %}
-                                            {% include 'TalentoHumano/GestionPermisos/_tarjeta_permiso.html' with permiso=permiso %}
-                                        {% endif %}
-                                    {% endfor %}
-                                </div>
-                                {% endfor %}
-                                {% if lista_grupos %}
+                                {% if id_filtro != 1 %}
+                                    {% for ct in lista_content_type %}
                                     <nav class="navbar navbar-expand-lg navbar-dark bg-primary bg-primary-gradient">
-                                        <a class="navbar-brand d-flex align-items-center fw-500" style="color: white">Grupos de Permisos</a>
+                                        <a class="navbar-brand d-flex align-items-center fw-500" style="color: white">{{ ct }}</a>
                                     </nav>
                                     <br>
-                                    <div class="row">
-                                        {% for grupo in lista_grupos %}
-                                            {% include 'TalentoHumano/GestionPermisos/_tarjeta_grupo.html' with permiso=grupo %}
+                                    <div class="row" id="js-general">
+                                        {% for permiso in permisos %}
+                                            {% if ct == permiso.app_label %}
+                                                {% include 'TalentoHumano/GestionPermisos/_tarjeta_permiso.html' with permiso=permiso %}
+                                            {% endif %}
                                         {% endfor %}
                                     </div>
+                                    {% endfor %}
+                                {% endif %}
+                                {% if id_filtro == 0 or id_filtro == 1 %}
+                                    {% if lista_grupos %}
+                                        <nav class="navbar navbar-expand-lg navbar-dark bg-primary bg-primary-gradient">
+                                            <a class="navbar-brand d-flex align-items-center fw-500" style="color: white">Grupos de Permisos</a>
+                                        </nav>
+                                        <br>
+                                        <div class="row">
+                                            {% for grupo in lista_grupos %}
+                                                {% include 'TalentoHumano/GestionPermisos/_tarjeta_grupo.html' with permiso=grupo %}
+                                            {% endfor %}
+                                        </div>
+                                    {% endif %}
                                 {% endif %}
                             </div>
                         </div>
