--- a/TalentoHumano/templates/TalentoHumano/GestionPermisos/asignacion_permisos.html
+++ b/TalentoHumano/templates/TalentoHumano/GestionPermisos/asignacion_permisos.html
@@ -48,7 +48,7 @@
                                     <div class="form-row p-t-10">
                                         <div class="col-xl-12">
                                             <div class="border-faded bg-faded p-3 mb-g d-flex">
-                                                <input type="text" id="js-filter-general" class="form-control shadow-inset-2 form-control-lg" placeholder="Filtrar Permisos">
+                                                <input type="text" id="js-filter-permisos" class="form-control shadow-inset-2 form-control-lg" placeholder="Filtrar Permisos">
                                                 <div class="btn-group btn-group-lg btn-group-toggle hidden-lg-down ml-3" data-toggle="buttons">
                                                     <label class="btn btn-default active">
                                                         <input type="radio" name="filtro-general" id="grid" checked="" value="grid"><i class="fas fa-table"></i>
@@ -60,34 +60,36 @@
                                             </div>
                                         </div>
                                     </div>
-                                {% if id_filtro != 1 %}
-                                    {% for ct in lista_content_type %}
-                                    <nav class="navbar navbar-expand-lg navbar-dark bg-primary bg-primary-gradient">
-                                        <a class="navbar-brand d-flex align-items-center fw-500" style="color: white">{{ ct }}</a>
-                                    </nav>
-                                    <br>
-                                    <div class="row" id="js-general">
-                                        {% for permiso in permisos %}
-                                            {% if ct == permiso.app_label %}
-                                                {% include 'TalentoHumano/GestionPermisos/_tarjeta_permiso.html' with permiso=permiso %}
-                                            {% endif %}
-                                        {% endfor %}
-                                    </div>
-                                    {% endfor %}
-                                {% endif %}
-                                {% if id_filtro == 0 or id_filtro == 1 %}
-                                    {% if lista_grupos %}
-                                        <nav class="navbar navbar-expand-lg navbar-dark bg-primary bg-primary-gradient">
-                                            <a class="navbar-brand d-flex align-items-center fw-500" style="color: white">Grupos de Permisos</a>
+                                <div id="js-permisos">
+                                    {% if id_filtro != 1 %}
+                                        {% for ct in lista_content_type %}
+                                        <nav class="navbar navbar-expand-lg navbar-dark bg-primary bg-primary-gradient label-funcionalidad">
+                                            <a class="navbar-brand d-flex align-items-center fw-500" style="color: white">{{ ct }}</a>
                                         </nav>
-                                        <br>
-                                        <div class="row">
-                                            {% for grupo in lista_grupos %}
-                                                {% include 'TalentoHumano/GestionPermisos/_tarjeta_grupo.html' with permiso=grupo %}
+                                        <br class="label-funcionalidad">
+                                        <div class="row" id="js-general">
+                                            {% for permiso in permisos %}
+                                                {% if ct == permiso.app_label %}
+                                                    {% include 'TalentoHumano/GestionPermisos/_tarjeta_permiso.html' with permiso=permiso %}
+                                                {% endif %}
                                             {% endfor %}
                                         </div>
+                                        {% endfor %}
                                     {% endif %}
-                                {% endif %}
+                                    {% if id_filtro == 0 or id_filtro == 1 %}
+                                        {% if lista_grupos %}
+                                            <nav class="navbar navbar-expand-lg navbar-dark bg-primary bg-primary-gradient label-funcionalidad">
+                                                <a class="navbar-brand d-flex align-items-center fw-500" style="color: white">Grupos de Permisos</a>
+                                            </nav>
+                                            <br class="label-funcionalidad">
+                                            <div class="row">
+                                                {% for grupo in lista_grupos %}
+                                                    {% include 'TalentoHumano/GestionPermisos/_tarjeta_grupo.html' with permiso=grupo %}
+                                                {% endfor %}
+                                            </div>
+                                        {% endif %}
+                                    {% endif %}
+                                </div>
                             </div>
                         </div>
                     </div>
