EVA-94 Feat: Se crea la lista con la descripción de los permisos seleccionados.

--- a/Administracion/templates/Administracion/GruposPermisos/index.html
+++ b/Administracion/templates/Administracion/GruposPermisos/index.html
@@ -49,7 +49,11 @@
                                                             <tr>
                                                                 <td>{{ grupo.nombre }}</td>
                                                                 <td>{{ grupo.descripcion }}</td>
-                                                                <td>{{ grupo.permisos }}</td>
+                                                                <td>
+                                                                    {% for prm in grupo.permisos %}
+                                                                        {{ prm }}<br>
+                                                                    {% endfor %}
+                                                                </td>
                                                                 <td>{% if grupo.estado == True %}
                                                                     <span class="badge badge-primary">Activo</span>
                                                                     {% else %}
