EVA-94 Feat: Se le define un ancho maximo a la columna de permisos, para que siempre se vean completos.

--- a/Administracion/templates/Administracion/GruposPermisos/index.html
+++ b/Administracion/templates/Administracion/GruposPermisos/index.html
@@ -37,7 +37,7 @@
                                                         <tr>
                                                             <th>Nombre</th>
                                                             <th>Descripción</th>
-                                                            <th>Permisos</th>
+                                                            <th style="min-width: 300px">Permisos</th>
                                                             <th>Estado</th>
                                                             {% if perms.auth.change_group or perms.auth.delete_group %}
                                                                 <th>Acción</th>
