EVA-94 Feat: Se crea un js para controlar el selector de grupos de permisos en crear-editar colaboradores

--- a/TalentoHumano/templates/TalentoHumano/Colaboradores/crear-editar.html
+++ b/TalentoHumano/templates/TalentoHumano/Colaboradores/crear-editar.html
@@ -285,4 +285,5 @@
     <script src="{% static 'TalentoHumano/js/wizard.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/custom/modificacionesSelect2.js' %}"></script>
     <script src="{% static 'TalentoHumano/js/selectMultipleContratos.js' %}"></script>
+    <script src="{% static 'TalentoHumano/js/selectMultipleGruposPermisos.js' %}"></script>
 {% endblock scripts%}
