--- a/TalentoHumano/templates/TalentoHumano/GestionPermisos/_tarjeta_grupo.html
+++ b/TalentoHumano/templates/TalentoHumano/GestionPermisos/_tarjeta_grupo.html
@@ -10,8 +10,8 @@
                 <div class="col-md-2" style="">
                     <div class="custom-control custom-switch" style="float: right;">
                         <div class="custom-control custom-checkbox">
-                            <input type="checkbox" value="{{ permiso.grupo }}" id="permiso_{{ permiso.grupo }}_id" {% for grp in grupos_usuario %}{% if grp.id == permiso.id_grupo %} checked {% endif %}{% endfor %} name="permisos" class="custom-control-input form-control">
-                            <label for="permiso_{{ permiso.grupo }}_id" class="custom-control-label no-seleccionable"></label>
+                            <input type="checkbox" value="{{ permiso.grupo }}" id="grupo_{{ permiso.grupo }}_id" {% for grp in grupos_usuario %}{% if grp.id == permiso.id_grupo %} checked {% endif %}{% endfor %} name="grupos" class="custom-control-input form-control">
+                            <label for="grupo_{{ permiso.grupo }}_id" class="custom-control-label no-seleccionable"></label>
                         </div>
                     </div>
                 </div>
