EVA-97 Feat: Se edita el index de documentos para mostrar el colaborador que carga el archivo en el detalle del historial.

--- a/SGI/templates/SGI/documentos/index.html
+++ b/SGI/templates/SGI/documentos/index.html
@@ -110,6 +110,9 @@
                                                                                                 <div class="panel-content">
                                                                                                     <h5>
                                                                                                         <small class="mt-0 mb-1 text-muted">
+                                                                                                            <b>Cargado Por: </b> {{ hst.usuario.get_full_name }}
+                                                                                                        </small>
+                                                                                                        <small class="mt-0 mb-1 text-muted">
                                                                                                             <b>Fecha del Documento: </b> {{ hst.fecha_documento }}
                                                                                                         </small>
                                                                                                         <small class="mt-0 mb-1 text-muted">
