EVA-98 Feat: Se crea un js para controlar el envio de la busqueda

--- a/SGI/templates/SGI/_common/base_sgi.html
+++ b/SGI/templates/SGI/_common/base_sgi.html
@@ -2,3 +2,7 @@
 {% block menu_aplicacion %}
     {% include 'SGI/_common/menu_aplicacion.html' %}
 {% endblock %}
+{% load static %}
+{% block scripts %}
+    <script src="{% static 'SGI/js/busquedaDocumentos.js' %}"></script>
+{% endblock %}
