EVA-98 Fix: Se pasa el id para ejecutar la busqeuda del logo de la lupa al div, porque no funcionaba si no se hacia clic directamente en el icono.

--- a/SGI/templates/SGI/_common/menu_aplicacion.html
+++ b/SGI/templates/SGI/_common/menu_aplicacion.html
@@ -13,8 +13,8 @@
                             <div class="input-group">
                                 <input type="search" class="form-control form-control-md shadow-inset-2" placeholder="Buscar" name="texto_busqueda" id="texto_busqueda" value="{{ texto_busqueda }}">
                                 <div class="input-group-append">
-                                    <div class="input-group-text">
-                                        <i class="fal fa-search fs-xl" id="id_buscar"></i>
+                                    <div class="input-group-text" id="id_buscar">
+                                        <i class="fal fa-search fs-xl" ></i>
                                     </div>
                                 </div>
                             </div>
